--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "admin-lte": "^3.1.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.7.1",
+    "chartjs-gauge": "^0.3.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
