--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "muter": "^0.7.0",
+    "popper.js": "^1.11.0",
     "react-gauge-chart": "^0.4.0",
     "rs": "0.0.1",
     "startbootstrap-sb-admin-2": "^4.0.7"
